# plasma-runner-pidgin

./: .gitignore  CMakeLists.txt  README.md  krunner_pidginrunner.desktop  main.cpp  pidgindbusconnector.cpp  pidgindbusconnector.h  pidginrunner.cpp  pidginrunner.h  plasma-runner-pidgin.desktop
runner/: CMakeLists.txt  main.cpp  pidgin_dbus.cpp  pidgin_dbus.h  pidgin_runner.cpp  pidgin_runner.h  plasma-runner-pidgin.desktop
